--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-      "node": "7.10.0"
+    "node": "7.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,6 +27,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "mustache-express": "^1.2.5",
     "passport": "^0.3.2",
